--- a/site.css
+++ b/site.css
@@ -132,6 +132,7 @@ footer{
     50px; 
     border-top-left-radius: 15px; 
     border-top-right-radius: 15px; 
+    text-align: center;
 }
 footer h1{
     text-align: center;
